NEW - bug 316707: [releng] udpate test servers to Trac 0.12 https://bugs.eclipse.org/bugs/show_bug.cgi?id=316707

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -16,7 +16,7 @@
 		<i>Jun 23, 2010</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.4&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1">204</font><br><font size="1">bugs</font></a></td>
+		<font size="1">205</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#E0D0E6"><font size="1">Helios release.</font></td>
 	</tr>
 	<tr>
@@ -75,7 +75,7 @@
 	<li><a href="#task-focused-interface">Task-Focused Interface (2)</a></li>
 	<li><a href="#wikitext">WikiText (6)</a></li>
 	<li><a href="#bugzilla">Bugzilla Connector (4)</a></li>
-	<li><a href="#bugzilla">Trac Connector (1)</a></li>
+	<li><a href="#trac">Trac Connector (2)</a></li>
 	<li><a href="#cdt">C/C++ Development Tooling</a></li>
 	<li><a href="#incubator">Incubator (1)</a></li>
 	<li><a href="#framework">Framework and API (5)</a></li>
@@ -565,6 +565,19 @@
 		</td>
 	</tr>
 	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Bugzilla 3.6</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Bugzilla 3.6 is supported.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>QA Contact</b></p>
 		</td>
@@ -592,6 +605,19 @@
 		<td valign="top" width="85%">
 		<p align="left">The attachment dialog provides an option to override attachments with the same name.</p>
 		<p><img border="0" src="images/3.4/task-attachment-override.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Trac 0.12</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Trac 0.12 is supported.</p>
 		</td>
 	</tr>
 	<tr>
