NEW - bug 313422: create New & Noteworthy for Mylyn 3.4 https://bugs.eclipse.org/bugs/show_bug.cgi?id=313422

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -431,7 +431,10 @@
 		<p align="right"><b>Templates</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">WikiText supports templates that are configurable through the preferences and accessible from content assist.</p>
+		<p align="left">
+		WikiText content assist now supports templates that are configurable through the preferences.  This is particularly useful for commonly used text in bug comments and descriptions, and for implementing standard documentation templates:
+		</p>
+		<img src="images/3.4/wikitext-templates.png"/>
 		</td>
 	</tr>
 	<tr>
@@ -444,7 +447,11 @@
 		<p align="right"><b>Generation of Eclipse Help</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">WikiText supports generating Eclips Help from a MediaWiki.</p>
+		<p align="left">WikiText now has greatly improved integration with MediaWiki for generating Eclipse Help directly from a wiki.
+		   While it was possible to process individual pages before, now Mylyn WikiText makes it easy to process multiple wiki pages at 
+		   once while automatically downloading images, maintaining page cross-references, and building a unified table of contents.
+		   More about this feature including a working sample project is available in the <a href="http://wiki.eclipse.org/DocumentationGuidelines/CrowdSourcingExample">Crowd Sourcing Example</a>.
+		</p>
 		</td>
 	</tr>
 	<tr>
@@ -470,20 +477,10 @@
 		<p align="right"><b>Markup Improvements</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">Strikethrough and underline are now displayed in the corresponding style.</p>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		<hr>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Templates</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">WikiText supports templates that are configurable through the preferences and accessible from content assist.</p>
+		<p align="left">Strikethrough and underline are now displayed in the corresponding style.  This is particularly useful for
+		task repositories that support an editable description, where strikethrough can be used to indicate completed items in a list.
+		</p>
+		<img src="images/3.4/wikitext-strikethrough.png"/>
 		</td>
 	</tr>
 	<tr>
