NEW - bug 313422: create New & Noteworthy for Mylyn 3.4 https://bugs.eclipse.org/bugs/show_bug.cgi?id=313422

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -493,7 +493,11 @@
 		<p align="right"><b>Linking to Source Files</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">Links to source files are shown as hyperlinks.</p>
+		<p align="left">Hyperlinks in the wiki source editor has been improved to match on filenames disregarding file extension.
+		This improvement helps when editing wiki source files in the workspace that are used to generate to another format in a build processing step.
+		Selecting a hyperlink opens the corresponding file in its default editor, making editing linked wiki markup source files easy.
+		</p>
+		<img src="images/3.4/wikitext-source-hyperlinks.png"/>
 		</td>
 	</tr>
 	<tr>
