NEW - bug 313422: create New & Noteworthy for Mylyn 3.4 https://bugs.eclipse.org/bugs/show_bug.cgi?id=313422

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -145,7 +145,7 @@
 		<p align="right"><b>Wildcards Support for Content Assist</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The bug completion now supports using wild cards to select matches.</p>
+		<p align="left">Bug content assist now supports using wild cards to select matches.</p>
 		<p><img border="0" src="images/3.4/task-content-assist.png"></p>
 		</td>
 	</tr>
@@ -159,7 +159,7 @@
 		<p align="right"><b>Clone Task</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The Task Editor now supports cloning of tasks from the popup menu.</p>
+		<p align="left">The Task Editor supports cloning of tasks from the popup menu.</p>
 		<p><img border="0" src="images/3.4/task-editor-clone.png"></p>
 		</td>
 	</tr>
@@ -307,7 +307,7 @@
 		<p align="right"><b>Startup Message</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">A message is displayed on startup with a clean workspace.</p>
+		<p align="left">A message is displayed on startup of an empty workspaces for quick access to repository creation.</p>
 		<p><img border="0" src="images/3.4/service-message.png"></p>
 		</td>
 	</tr>
@@ -381,7 +381,7 @@
 		<p align="right"><b>Template for Active Task</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">A templates for Java that inserts the ID of the active task can now be configured in the preferences.</p>
+		<p align="left">A templates for Java that inserts the ID of the active task can be configured in the preferences. A template for Javacoc comments named <tt>active_task</tt> is defined by default.</p>
 		<p><img border="0" src="images/3.4/active-task-template.png"></p>
 		</td>
 	</tr>
