NEW - bug 313422: create New & Noteworthy for Mylyn 3.4 https://bugs.eclipse.org/bugs/show_bug.cgi?id=313422

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -249,20 +249,29 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Incomings and Outgoings Shown in Scheduled Presentation</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The scheduled presentation has been redesigned to serve the purpose
+		of showing what's most important when working with a Task List that has a large number of 
+		incoming changes.  Scheduled items will show at the top of the presentation, ensuring that
+		tasks scheduled for Today or This Week rise above those with incoming changes on them.  
+		Below that tasks with outgoing changes, such as draft comments or Unsubmitted tasks, are shown.
+		Incoming tasks are show below that.  Finally, Unscheduled and Completed tasks are listed, ensuring
+		that all tasks are accessible from this presentation.  Be sure to try the presentation with 
+		the Focus on Workweek button enabled if you are using scheduling, as an additional key benefit
+		is that it does not duplicate tasks, since tasks that show in a container will not reappear
+		in a container below it.</p>
+		<p><img border="0" src="images/3.4/scheduled-presentation.png"></p>		
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>New Presentation Switcher</b></p>
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">The categorized and scheduled presentation can be accessed through separate buttons.</p>
 		<p><img border="0" src="images/3.4/presentation-switcher.png"></p>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Incomings and Outgoings Shown in Scheduled Presentation</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">The scheduled presentation shows incomings and outgoings. Duplicates are now filtered.</p>
-		<p><img border="0" src="images/3.4/scheduled-presentation.png"></p>		
 		</td>
 	</tr>
 	<tr>
