NEW - bug 313422: create New & Noteworthy for Mylyn 3.4 https://bugs.eclipse.org/bugs/show_bug.cgi?id=313422

--- a/new/new.html
+++ b/new/new.html
@@ -17,7 +17,7 @@
 		<td bgcolor="#E0D0E6" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.4&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
 		<font size="1">205</font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#E0D0E6"><font size="1">Peter Stibrany contributed improvements for the handling of attachments. Flavio Donze reduced dependencies of the tasks framework. Abner Ballardo provided user interface improvements. Additional contributions were provided by Kevin Sawicki, Steve Elsemore, Andreas Hoehmann, Jacques Lescot, Benjamin Muskalla, Attila Szökrönyös and Thomas Ehrnhoefer.</font></td>
+		<td bgcolor="#E0D0E6"><font size="1">Peter Stibrany contributed improvements for the handling of attachments. Flavio Donze reduced dependencies of the tasks framework. Abner Ballardo provided user interface improvements. Additional contributions were provided by Kevin Sawicki, Steve Elsemore, Andreas Hoehmann, Jacques Lescot, Benjamin Muskalla, Attila Sz&ouml;kr&ouml;ny&ouml;s and Thomas Ehrnhoefer.</font></td>
 	</tr>
 	<tr>
 		<td bgcolor="#FAF7FB"><font size="1">3.3.3<br>
