NEW - bug 313422: create New & Noteworthy for Mylyn 3.4 https://bugs.eclipse.org/bugs/show_bug.cgi?id=313422

--- a/new/new.html
+++ b/new/new.html
@@ -79,7 +79,7 @@
 	<li><a href="#framework">Framework and API (5)</a></li>
 </ul>
 
-<p><b>Note: </b>The Mylyn JIRA Connector <a href="http://wiki.eclipse.org/index.php/Mylyn_FAQ#What_happened_to_the_Mylyn_JIRA_Connector.3F">has moved to Atlassian</a> and the Trac connector is now available from the main e3.4 update site. The extras update site has been removed.</p>
+<p>Note: The Mylyn JIRA Connector <a href="http://wiki.eclipse.org/index.php/Mylyn_FAQ#What_happened_to_the_Mylyn_JIRA_Connector.3F">has moved to Atlassian</a>.
 
 <p>&nbsp;</p>
 <h2><a name="timing">Changes to Time Tracking</a></h2>
