NEW - bug 313422: create New & Noteworthy for Mylyn 3.4 https://bugs.eclipse.org/bugs/show_bug.cgi?id=313422

--- a/new/new.html
+++ b/new/new.html
@@ -79,7 +79,7 @@
 	<li><a href="#framework">Framework and API (5)</a></li>
 </ul>
 
-<p>Note: The Mylyn JIRA Connector <a href="http://wiki.eclipse.org/index.php/Mylyn_FAQ#What_happened_to_the_Mylyn_JIRA_Connector.3F">has moved to Atlassian</a>.
+<p>Note: The Mylyn JIRA Connector <a href="http://wiki.eclipse.org/index.php/Mylyn_FAQ#What_happened_to_the_Mylyn_JIRA_Connector.3F">has moved to Atlassian</a>.</p>
 
 <p>&nbsp;</p>
 <h2><a name="timing">Changes to Time Tracking</a></h2>
@@ -97,7 +97,7 @@
 		But it was not previously possible to use focusing without active time being captured.  Note that
 		the preference is off by default, since Mylyn makes all activity tracking and
 		automation opt-in.</p>
-		<img border="0" src="images/3.3/time-tracking.png">
+		<p><img border="0" src="images/3.3/time-tracking.png"></p>
 		</td>
 	</tr>
 	<tr>
@@ -232,8 +232,7 @@
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">The chooser for due dates has been streamlined to support a non-modal workflow.</p>
-		<p>
-		<img border="0" src="images/3.3/date-chooser.png">
+		<p><img border="0" src="images/3.3/date-chooser.png"></p>
 		</td>
 	</tr>
 	<tr>
@@ -249,20 +248,29 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Incomings and Outgoings Shown in Scheduled Presentation</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The scheduled presentation has been redesigned to serve the purpose
+		of showing what's most important when working with a Task List that has a large number of 
+		incoming changes.  Scheduled items will show at the top of the presentation, ensuring that
+		tasks scheduled for Today or This Week rise above those with incoming changes on them.  
+		Below that tasks with outgoing changes, such as draft comments or Unsubmitted tasks, are shown.
+		Incoming tasks are show below that.  Finally, Unscheduled and Completed tasks are listed, ensuring
+		that all tasks are accessible from this presentation.  Be sure to try the presentation with 
+		the Focus on Workweek button enabled if you are using scheduling, as an additional key benefit
+		is that it does not duplicate tasks, since tasks that show in a container will not reappear
+		in a container below it.</p>
+		<p><img border="0" src="images/3.4/scheduled-presentation.png"></p>		
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>New Presentation Switcher</b></p>
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">The categorized and scheduled presentation can be accessed through separate buttons.</p>
 		<p><img border="0" src="images/3.4/presentation-switcher.png"></p>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Incomings and Outgoings Shown in Scheduled Presentation</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">The scheduled presentation shows incomings and outgoings. Duplicates are now filtered.</p>
-		<p><img border="0" src="images/3.4/scheduled-presentation.png"></p>		
 		</td>
 	</tr>
 	<tr>
