--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor="FFFFFF">
 
-<h2>New in Mylyn Weekly Builds</h2>
+<h2>New in Weekly Builds</h2>
 
 <!--
 <table border="1" style="border-collapse: collapse" width="100%" cellpadding="4" bordercolor="#FFFFFF">
