--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -77,13 +77,20 @@
 		<p><img border="0" src="images/3.5/bugzilla-custom-workflow.png"></p>
 		</td>
 	</tr>
-	<!-- 
 	<tr>
 		<td colspan="2">
 		<hr>
 		</td>
 	</tr>
-	 -->
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Attachment author decoration</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The attachment table highlights attachments submitted by the logged in user.</p>
+		<p><img border="0" src="images/3.5/attachment-table-decoration.png"></p>
+		</td>
+	</tr>
 </table>
 
 <p>&nbsp;</p>
@@ -92,6 +99,10 @@
 <ul>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=259291'>bug 259291</a>: add support for custom status workflow</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=308040'>bug 308040</a>: [build] provide Hudson integration for Mylyn</li>
+</ul>
+<hr size='1'>
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318505'>bug 318505</a>: display author icons in attachment section of task editor</li>
 </ul>
 
 </body>
