--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -70,11 +70,26 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Custom Workflow Support</b></p>
+		<p align="right"><b>Bugzilla: Custom Workflow Support</b></p>
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">Bugzilla supports <a href="http://wiki.eclipse.org/index.php/Mylyn/User_Guide">configuration of custom workflows</a>.</p>
 		<p><img border="0" src="images/3.5/bugzilla-custom-workflow.png"></p>
+		</td>
+	</tr>
+	<!--
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Bugzilla: Author Decoration for Attachments</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The attachment table highlights attachments submitted by the logged in user.</p>
+		<p><img border="0" src="images/3.5/attachment-table-decoration.png"></p>
 		</td>
 	</tr>
 	<tr>
@@ -84,25 +99,29 @@
 	</tr>
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Attachment author decoration</b></p>
+		<p align="right"><b>Trac: Decoration for Stories</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The attachment table highlights attachments submitted by the logged in user.</p>
-		<p><img border="0" src="images/3.5/attachment-table-decoration.png"></p>
+		<p align="left">Trac tickets with type 'story' are decorated as stories.</p>
+		<p><img border="0" src="images/3.5/trac-stories.png"></p>
 		</td>
 	</tr>
+	-->
 </table>
 
 <p>&nbsp;</p>
 <p><b>Bugs marked as New &amp; Noteworthy</b></p>
 
+<p>I20100626-2300</p>
 <ul>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=259291'>bug 259291</a>: add support for custom status workflow</li>
-<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=308040'>bug 308040</a>: [build] provide Hudson integration for Mylyn</li>
 </ul>
 <hr size='1'>
+<p>Pending</p>
 <ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=308040'>bug 308040</a>: [build] provide Hudson integration for Mylyn</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318505'>bug 318505</a>: display author icons in attachment section of task editor</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318954'>bug 318954</a>: support stories and improve sub task creation</li>
 </ul>
 
 </body>
