--- a/build_notes.html
+++ b/build_notes.html
@@ -11,6 +11,12 @@
 
 <h1>Mylyn Release Notes (3.4 Maintenance Stream)</h1>
 
+<p>Integration Build (July 06, 2010, 5:16 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=318954">Bug 318954</a>. support stories and improve sub task creation (FIXED)<br>
+  </p>
+
 <p>Integration Build (June 25, 2010, 3:34 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
