NEW - bug 253932: [upstream] submitting changes also sends unchanged fields possibly resetting them to old values https://bugs.eclipse.org/bugs/show_bug.cgi?id=253932

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -106,6 +106,20 @@
 		<p><img border="0" src="images/3.5/trac-stories.png"></p>
 		</td>
 	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Trac: Mid-air collision detection support</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">If a Trac ticket has changed since it was last synchronized an error is displayed to avoid unintentional overwriting of changes. Please note that this requires a <a href="http://trac-hacks.org/ticket/5402">patched version of Trac's XML-RPC Plugin</a>.</p>
+		<p><img border="0" src="images/3.5/trac-mid-air-collision.png"></p>
+		</td>
+	</tr>
 	-->
 </table>
 
@@ -122,6 +136,7 @@
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=308040'>bug 308040</a>: [build] provide Hudson integration for Mylyn</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318505'>bug 318505</a>: display author icons in attachment section of task editor</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318954'>bug 318954</a>: support stories and improve sub task creation</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=253932'>bug 253932</a>: submitting changes also sends unchanged fields possibly resetting them to old values</li>
 </ul>
 
 </body>
