--- a/build_notes.html
+++ b/build_notes.html
@@ -11,6 +11,17 @@
 
 <h1>Mylyn Release Notes (3.4 Maintenance Stream)</h1>
 
+<p>Integration Build (July 09, 2010, 10:59 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=253932">Bug 253932</a>. [upstream] submitting changes also sends unchanged fields possibly resetting them to old values (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294910">Bug 294910</a>. [cdt] content Assist for preprocessor directives stopped working (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=317544">Bug 317544</a>. [releng] release 3.4.1 (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=317647">Bug 317647</a>. Resource monitoring exclusions not properly initialized in a clean workspace (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=317889">Bug 317889</a>. [cdt] Autocomplete doesn't work on return value type for static typedef (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=318271">Bug 318271</a>. fix failing tests for 3.5 (NEW)<br>
+  </p>
+
 <p>Integration Build (July 06, 2010, 5:16 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
