RESOLVED - bug 319397: [api] let the connector be able to define task ownership definition https://bugs.eclipse.org/bugs/show_bug.cgi?id=319397

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -137,6 +137,7 @@
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318505'>bug 318505</a>: display author icons in attachment section of task editor</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318954'>bug 318954</a>: support stories and improve sub task creation</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=253932'>bug 253932</a>: submitting changes also sends unchanged fields possibly resetting them to old values</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=319397'>bug 319397</a>: [api] let the connector be able to define task ownership definition</li>
 </ul>
 
 </body>
