NEW - bug 319469: [patch] Highlight filter matches in Task Search view https://bugs.eclipse.org/bugs/show_bug.cgi?id=319469

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -120,6 +120,20 @@
 		<p><img border="0" src="images/3.5/trac-mid-air-collision.png"></p>
 		</td>
 	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Filter Matches are Highlighted in Search View</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">When task search results are filtered matches are highlighted to identify them more easily.</p>
+		<p><img border="0" src="images/3.5/search-result-highlighting.png"></p>
+		</td>
+	</tr>
 	-->
 </table>
 
@@ -138,6 +152,7 @@
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318954'>bug 318954</a>: support stories and improve sub task creation</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=253932'>bug 253932</a>: submitting changes also sends unchanged fields possibly resetting them to old values</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=319397'>bug 319397</a>: [api] let the connector be able to define task ownership definition</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=319469'>bug 319469</a>: [patch] Highlight filter matches in Task Search view</li>
 </ul>
 
 </body>
