--- a/build_notes.html
+++ b/build_notes.html
@@ -11,6 +11,25 @@
 
 <h1>Mylyn Release Notes (3.4 Maintenance Stream)</h1>
 
+<p>Integration Build (July 30, 2010, 3:45 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=192485">Bug 192485</a>. add sort by last modified date to Task List (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=297934">Bug 297934</a>. update user reference guide to reflect editor changes (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=303509">Bug 303509</a>. TaskComparator.sortByRank(...) does not sort when one of the tasks has null in RANK (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=306065">Bug 306065</a>. "Unscheduled" in Scheduled Task Presentation shows date 7010 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=316253">Bug 316253</a>. [api] provide access to instance of IRepositoryManager through core API (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=316373">Bug 316373</a>. due task scheduled for next weeks shows twice (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=317751">Bug 317751</a>. Details and Mark as menu on attachment shows on all connectors (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=318112">Bug 318112</a>. [releng] update the test repositories to the latest version of Bugzilla (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=318271">Bug 318271</a>. fix failing tests for 3.5 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=319624">Bug 319624</a>. when focus is enabled or disabled in the task list, the toolbar seems to jump (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=319946">Bug 319946</a>. Restore access to WikiText Quick Outline inside tasks (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=320141">Bug 320141</a>. provide option to turn off resource monitoring (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=320198">Bug 320198</a>. BugzillaRepositorySettingsPage has label 3.0 -3.4 for supported versions (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=320697">Bug 320697</a>. [regression] priorities mapped to P3 when migrating from Bugzilla 3.4 or earlier (FIXED)<br>
+  </p>
+
 <p>Integration Build (July 09, 2010, 10:59 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
