--- a/build_notes.html
+++ b/build_notes.html
@@ -11,6 +11,12 @@
 
 <h1>Mylyn Release Notes (3.4 Maintenance Stream)</h1>
 
+<p>Integration Build (July 30, 2010, 4:04 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=321265">Bug 321265</a>. [e4] initialization of GradientDrawer causes IllegalArgumentException (FIXED)<br>
+  </p>
+
 <p>Integration Build (July 30, 2010, 3:45 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
