--- a/build_notes.html
+++ b/build_notes.html
@@ -11,6 +11,12 @@
 
 <h1>Mylyn Release Notes (3.4 Maintenance Stream)</h1>
 
+<p>Integration Build (July 30, 2010, 4:06 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=304102">Bug 304102</a>. suggest to user to remove extras update site (NEW)<br>
+  </p>
+
 <p>Integration Build (July 30, 2010, 4:05 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
