--- a/build_notes.html
+++ b/build_notes.html
@@ -11,6 +11,12 @@
 
 <h1>Mylyn Release Notes (3.4 Maintenance Stream)</h1>
 
+<p>Integration Build (August 04, 2010, 2:26 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=319412">Bug 319412</a>. provide documentation for support extension point (FIXED)<br>
+  </p>
+
 <p>Integration Build (July 30, 2010, 4:06 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
