--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -3,6 +3,8 @@
 
 <h2>New in Weekly Builds</h2>
 
+<h3>DRAFT</h3>
+
 <!--
 <table border="1" style="border-collapse: collapse" width="100%" cellpadding="4" bordercolor="#FFFFFF">
 	<tr>
@@ -77,7 +79,6 @@
 		<p><img border="0" src="images/3.5/bugzilla-custom-workflow.png"></p>
 		</td>
 	</tr>
-	<!--
 	<tr>
 		<td colspan="2">
 		<hr>
@@ -134,7 +135,70 @@
 		<p><img border="0" src="images/3.5/search-result-highlighting.png"></p>
 		</td>
 	</tr>
-	-->
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Team Repositories View</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The Team Repositories view provides facilities for creating, managing and browsing team repositories such as build servers, task repositories, SCM repositores or review servers.</p>
+		<p><img border="0" src="images/3.5/team-repositories.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Create Team Repositories</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The repository wizard provides a common entry point for creating team repositories.</p>
+		<p><img border="0" src="images/3.5/team-repository-wizard.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Incubator: Hudson Connector</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The Hudson connector, developed by Markus Knittig as part of <a href="http://wiki.eclipse.org/Mylyn/Hudson_Integration_for_Mylyn" target="_new">his Google Summer of Code project</a>, shows the status of build jobs in a Builds view.</p>
+		<p><img border="0" src="images/3.5/builds-view.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Build jobs can be selected for monitoring from the properties dialog.</p>
+		<p><img border="0" src="images/3.5/hudson-properties.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Automatic refreshing of build status can be configured in the preferences.</p>
+		<p><img border="0" src="images/3.5/builds-preferences.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The overall status of builds is displayed as a decoration when the Builds view is in fast view mode.</p>
+		<p><img border="0" src="images/3.5/builds-view-icon.png"></p>
+		</td>
+	</tr>	
 </table>
 
 <p>&nbsp;</p>
@@ -145,15 +209,18 @@
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=259291'>bug 259291</a>: add support for custom status workflow</li>
 </ul>
 <hr size='1'>
-<p>Pending</p>
+<p>I20100805-0400</p>
 <ul>
-<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=308040'>bug 308040</a>: [build] provide Hudson integration for Mylyn</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318505'>bug 318505</a>: display author icons in attachment section of task editor</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318954'>bug 318954</a>: support stories and improve sub task creation</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=253932'>bug 253932</a>: submitting changes also sends unchanged fields possibly resetting them to old values</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=319397'>bug 319397</a>: [api] let the connector be able to define task ownership definition</li>
-<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=319469'>bug 319469</a>: [patch] Highlight filter matches in Task Search view</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=319469'>bug 319469</a>: highlight filter matches in Task Search view</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318097'>bug 318097</a>: provide common team repositories view</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=308040'>bug 308040</a>: provide Hudson integration for Mylyn</li>
 </ul>
+<hr size='1'>
+<p>Pending</p>
 
 </body>
 </html>
