--- a/build_notes.html
+++ b/build_notes.html
@@ -11,6 +11,14 @@
 
 <h1>Mylyn Release Notes (3.4 Maintenance Stream)</h1>
 
+<p>Integration Build (August 23, 2010, 3:05 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=321809">Bug 321809</a>. [releng] release 3.4.2 (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=321948">Bug 321948</a>. open task from svn history throws npe (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=323190">Bug 323190</a>. tasks with shared due dates are not always correctly migrated (FIXED)<br>
+  </p>
+
 <p>Integration Build (August 04, 2010, 2:26 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
